snippets/initcontainers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-demo
spec:
  containers:
  - name: myapp
    image: nginx:1.21
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh","-c","echo started > /tmp/start.txt"]
    ports:
    - containerPort: 80
  restartPolicy: Never
