snippets/readonlyrootfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readonlyfs-demo
spec:
  containers:
  - name: app
    image: nginx:1.21
    securityContext:
      readOnlyRootFilesystem: true
    ports:
    - containerPort: 80
  restartPolicy: Always
