snippets/seccomp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seccomp-demo
  labels:
    app: seccomp
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  restartPolicy: Always
