snippets/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
