snippets/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-svc
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
